--- a/scss/forms/_form-file.scss
+++ b/scss/forms/_form-file.scss
@@ -1,6 +1,6 @@
 // File input
 @if $enable-form and $enable-form-file {
-    .custom-file {
+    .form-file {
         position: relative;
         display: inline-block;
         width: 100%;
@@ -8,7 +8,7 @@
         margin-bottom: 0;
     }
 
-    .custom-file-input {
+    .form-file-input {
         position: relative;
         z-index: 2;
         width: 100%;
@@ -16,79 +16,83 @@
         margin: 0;
         opacity: 0;
 
-        &:focus-within ~ .custom-file-label, // Firefox workaround
-        &:focus ~ .custom-file-label {
-            color: $input-focus-color;
-            background-color: $input-focus-bg;
-            border-color: $input-focus-border-color;
-            outline: 0;
-            // Avoid using mixin so we can pass custom focus shadow properly
-            @if $enable-shadows {
-                box-shadow: $input-box-shadow, $input-focus-box-shadow;
-            } @else {
-                box-shadow: $input-focus-box-shadow;
-            }
-
-            &::after {
-                border-color: inherit;
+        &:focus-within, // Firefox workaround
+        &:focus {
+            ~ .form-file-label {
+                color: $input-focus-color;
+                background-color: $input-focus-bg;
+                border-color: $input-focus-border-color;
+                outline: 0;
+                // Avoid using mixin so we can pass custom focus shadow properly
+                @if $enable-shadows {
+                    box-shadow: $input-box-shadow, $input-focus-box-shadow;
+                } @else {
+                    box-shadow: $input-focus-box-shadow;
+                }
             }
         }
 
-        &:disabled ~ .custom-file-label {
-            color: $input-disabled-color;
-            background-color: $input-disabled-bg;
+        &:disabled {
+            & ~ .form-file-label {
+                color: $input-disabled-color;
 
-            &::after {
-                opacity: $custom-file-button-disabled-opacity;
+                .form-file-text {
+                    background-color: $input-disabled-bg;
+                }
+                .form-file-button {
+                    color: $form-file-button-disabled-color;
+                    background-color: $form-file-button-disabled-bg;
+                    opacity: $form-file-button-disabled-opacity;
+                }
             }
-        }
-
-        @each $lang, $text in $custom-file-text {
-            &:lang(#{$lang}) ~ .custom-file-label::after {
-                content: $text;
-            }
-        }
-
-        ~ .custom-file-label[data-browse]::after {
-            content: attr(data-browse) !important;  // stylelint-disable-line declaration-no-important
         }
     }
 
-    .custom-file-label {
+    .form-file-label {
         position: absolute;
         top: 0;
         right: 0;
         left: 0;
         z-index: 1;
+        display: flex;
         height: calc-input-height-outer($input-padding-y, $input-line-height);
+        color: $input-color;
+        border-color: $input-border-color;
+        @include border-radius($input-border-radius);
+        @include box-shadow($input-box-shadow);
+        @include transition($input-transition);
+    }
+
+    .form-file-text {
+        display: block;
+        flex-grow: 1;
         padding: $input-padding-y $input-padding-x;
         overflow: hidden;
         font-family: $input-font-family;
         @include font-size($input-font-size);
         font-weight: $input-font-weight;
         line-height: $input-line-height;
-        color: $input-color;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         background-color: $input-bg;
-        border: $input-border-width solid $input-border-color;
-        @include border-radius($input-border-radius);
-        @include box-shadow($input-box-shadow);
-        @include transition($input-transition);
+        border: $input-border-width solid;
+        border-color: inherit;
+        @include border-start-radius(inherit);
+    }
 
-        &::after {
-            position: absolute;
-            top: 0;
-            right: 0;
-            z-index: 2;
-            display: block;
-            height: calc-input-height-outer($input-padding-y, $input-line-height);
-            padding: $input-padding-y $input-padding-x;
-            font-family: $btn-font-family;
-            line-height: $input-line-height;
-            color: $custom-file-button-color;
-            content: "Browse";
-            background-color: $custom-file-button-bg;
-            border-left: $input-border-width solid $input-border-color;
-            @include box-shadow($btn-box-shadow);
-        }
+    .form-file-button {
+        display: block;
+        flex-shrink: 0;
+        padding: $input-padding-y $input-padding-x;
+        margin-left: -$input-border-width;
+        font-family: $btn-font-family;
+        @include font-size($btn-font-size);
+        font-weight: $btn-font-weight;
+        line-height: $input-line-height;
+        color: $form-file-button-color;
+        background-color: $form-file-button-bg;
+        border: $input-border-width solid;
+        border-color: inherit;
+        @include border-end-radius(inherit);
     }
 }
