--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -81,110 +81,117 @@
         }
     }
 
-    .form-control {
-        @include form-validation-state-selector($state) {
-            border-color: $color;
+    %validation-feedback-tooltip-show-#{$state} {
+        display: block;
+    }
 
-            &:focus {
-                border-color: $color;
-                box-shadow: $input-focus-box-shadow-size rgba($color, $input-focus-box-shadow-alpha);
-            }
-
-            ~ .#{$state}-feedback,
-            ~ .#{$state}-tooltip {
-                display: block;
+    @include form-validation-state-selector($state) {
+        @if $enable-form-validation-feedback {
+            ~ .#{$state}-feedback {
+                @extend %validation-feedback-tooltip-show-#{$state};
             }
         }
 
-        @if $enable-validation-icons {
-            @include form-validation-state-selector-icon($state) {
-                //background: $icon no-repeat right $form-feedback-icon-offset center / $form-feedback-icon-width $form-feedback-icon-height;
-                background-image: $icon;
-                background-repeat: no-repeat;
-                background-position: right $form-feedback-icon-offset center;
-                background-size: $form-feedback-icon-width $form-feedback-icon-height;
+        @if $enable-form-validation-tooltip {
+            ~ .#{$state}-tooltip {
+                @extend %validation-feedback-tooltip-show-#{$state};
             }
         }
     }
 
-    @if $enable-validation-icons {
-        @if $enable-form-control {
-            .form-control:not(textarea):not(select) {
-                @include form-validation-state-selector-icon($state) {
-                    padding-right: calc(#{$input-padding-x} + #{$form-feedback-icon-width} + #{$form-feedback-icon-offset});
+    @if $enable-form-control {
+        .form-control {
+            @include form-validation-state-selector($state) {
+                border-color: $color;
+
+                &:focus {
+                    border-color: $color;
+                    box-shadow: $input-focus-box-shadow-size rgba($color, $input-focus-box-shadow-alpha);
                 }
             }
 
-            // Apply both the select indicator and validaton icons.
-            // stylelint-disable-next-line selector-no-qualifying-type
-            select.form-control:not([size]):not([size="1"]):not([multiple]) {
+            @if $enable-validation-icons {
                 @include form-validation-state-selector-icon($state) {
-                    padding-right: calc(#{$input-padding-x} + #{$form-feedback-icon-width} + #{$form-feedback-icon-offset} + #{$form-select-indicator-width} + #{$form-select-indicator-offset});
-                    background-image: $form-select-indicator-image, $icon;
-                    background-repeat: no-repeat, no-repeat;
-                    background-position: right $form-select-indicator-offset center, right calc(#{$form-feedback-icon-offset} + #{$form-select-indicator-width} + #{$form-select-indicator-offset}) center;
-                    background-size: $form-select-indicator-width $form-select-indicator-height, $form-feedback-icon-width $form-feedback-icon-height;
+                    //background: $icon no-repeat right $form-feedback-icon-offset center / $form-feedback-icon-width $form-feedback-icon-height;
+                    background-image: $icon;
+                    background-repeat: no-repeat;
+                    background-position: right $form-feedback-icon-offset center;
+                    background-size: $form-feedback-icon-width $form-feedback-icon-height;
                 }
             }
-
-            // Icon is placed on left, what should hopefully be the opposite side of the scrollbar,
-            // otherwise icon can become obscured by the scrollbar.
-            // stylelint-disable selector-no-qualifying-type
-            select.form-control[size]:not([size="1"]),
-            select.form-control[multiple],
-            textarea.form-control {
-                @include form-validation-state-selector-icon($state) {
-                    padding-left: calc(#{$input-padding-x} + #{$form-feedback-icon-width} + #{$form-feedback-icon-offset});
-                    background-position: left $form-feedback-icon-offset center;
-                }
-            }
-            // stylelint-enable selector-no-qualifying-type
         }
+    }
+
+    @if $enable-form-control and $enable-validation-icons {
+        .form-control:not(textarea):not(select) {
+            @include form-validation-state-selector-icon($state) {
+                padding-right: calc(#{$input-padding-x} + #{$form-feedback-icon-width} + #{$form-feedback-icon-offset});
+            }
+        }
+
+        // Apply both the select indicator and validaton icons.
+        // stylelint-disable-next-line selector-no-qualifying-type
+        select.form-control:not([size]):not([size="1"]):not([multiple]) {
+            @include form-validation-state-selector-icon($state) {
+                padding-right: calc(#{$input-padding-x} + #{$form-feedback-icon-width} + #{$form-feedback-icon-offset} + #{$form-select-indicator-width} + #{$form-select-indicator-offset});
+                background-image: $form-select-indicator-image, $icon;
+                background-repeat: no-repeat, no-repeat;
+                background-position: right $form-select-indicator-offset center, right calc(#{$form-feedback-icon-offset} + #{$form-select-indicator-width} + #{$form-select-indicator-offset}) center;
+                background-size: $form-select-indicator-width $form-select-indicator-height, $form-feedback-icon-width $form-feedback-icon-height;
+            }
+        }
+
+        // Icon is placed on left, what should hopefully be the opposite side of the scrollbar,
+        // otherwise icon can become obscured by the scrollbar.
+        // stylelint-disable selector-no-qualifying-type
+        select.form-control[size]:not([size="1"]),
+        select.form-control[multiple],
+        textarea.form-control {
+            @include form-validation-state-selector-icon($state) {
+                padding-left: calc(#{$input-padding-x} + #{$form-feedback-icon-width} + #{$form-feedback-icon-offset});
+                background-position: left $form-feedback-icon-offset center;
+            }
+        }
+        // stylelint-enable selector-no-qualifying-type
     }
 
     @if $enable-form-check {
+        @include form-validation-state-selector($state) {
+            ~ .form-check-label {
+                color: $color;
+            }
+        }
+
         .form-check-input {
             @include form-validation-state-selector($state) {
                 ~ .form-check-label {
-                    color: $color;
-                }
-
-                ~ .#{$state}-feedback,
-                ~ .#{$state}-tooltip {
-                    display: block;
-                }
-            }
-        }
-    }
-
-    @if $enable-custom-control {
-        .custom-control-input {
-            @include form-validation-state-selector($state) {
-                ~ .custom-control-label {
-                    color: $color;
-                }
-
-                ~ .custom-control-indicator {
                     &::before {
                         border-color: $color;
                     }
-                }
-
-                ~ .#{$state}-feedback,
-                ~ .#{$state}-tooltip {
-                    display: block;
-                }
-
-                &:checked {
-                    ~ .custom-control-indicator::before {
+                    &::after {
                         background-color: $color;
                         border-color: $color;
                     }
                 }
 
+                &:checked {
+                    ~ .form-check-label {
+                        &::before {
+                            background-color: $color;
+                            border-color: $color;
+                        }
+                        &::after {
+                            background-color: $form-switch-thumb-checked-bg;
+                            border-color: $form-switch-thumb-checked-border-color;
+                        }
+                    }
+                }
+
                 &:focus {
-                    ~ .custom-control-indicator::before {
-                        box-shadow: $input-focus-box-shadow-size rgba($color, $input-focus-box-shadow-alpha);
+                    ~ .form-check-label {
+                        &::before {
+                            box-shadow: $input-focus-box-shadow-size rgba($color, $input-focus-box-shadow-alpha);
+                        }
                     }
                 }
             }
@@ -197,11 +204,6 @@
             @include form-validation-state-selector($state) {
                 ~ .form-file-label {
                     border-color: $color;
-                }
-
-                ~ .#{$state}-feedback,
-                ~ .#{$state}-tooltip {
-                    display: block;
                 }
 
                 &:focus-within, // Firefox workaround
