update static form control

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -754,6 +754,8 @@ $input-disabled-opacity:        1 !default;
 
 $input-placeholder-color:       #999 !default;
 
+$input-static-color:            $body-color !default;
+
 $form-label-font-weight:        $font-weight-normal !default;
 
 $form-text-margin-top:          .25rem !default;
