--- a/scss/forms/_form-check.scss
+++ b/scss/forms/_form-check.scss
@@ -138,24 +138,28 @@
 
                 // Track
                 &::before {
-                    top: calc(((1em * #{$line-height-base}) - #{$form-switch-track-height}) / 2);
+                    top: 0;
+                    //top: calc(((1em * #{$line-height-base}) - #{$form-switch-track-height}) / 2);
                     left: 0;
                     width: $form-switch-width;
                     height: $form-switch-track-height;
                     background-color: $form-switch-track-bg;
                     border: $form-switch-track-border-width solid $form-switch-track-border-color;
                     @include border-radius($form-switch-track-radius);
+                    transform: translateY(.5em * $line-height-base) translateY($form-switch-track-height / -2);
                 }
 
                 // Thumb
                 &::after {
-                    top: calc(((1em * #{$line-height-base}) - #{$form-switch-thumb-height}) / 2);
+                    top: 0;
+                    //top: calc(((1em * #{$line-height-base}) - #{$form-switch-thumb-height}) / 2);
                     left: $form-switch-thumb-offset;
                     width: $form-switch-thumb-width;
                     height: $form-switch-thumb-height;
                     background-color: $form-switch-thumb-bg;
                     border: $form-switch-thumb-border-width solid $form-switch-thumb-border-color;
                     @include border-radius($form-switch-thumb-radius);
+                    transform: translateY(.5em * $line-height-base) translateY($form-switch-thumb-height / -2);
                 }
             }
 
