--- a/scss/forms/_form-check.scss
+++ b/scss/forms/_form-check.scss
@@ -51,20 +51,20 @@
                     content: "";
                     background-color: $form-checkradio-bg;
                     border: $form-checkradio-border-width solid $form-checkradio-border-color;
-                    // appearance: none;
+                    box-shadow: $form-checkradio-box-shadow;
                     @include transition($input-transition);
                 }
             }
 
             .form-check-input[type="checkbox"] ~ .form-check-label {
                 &::before {
-                    @include border-radius($form-checkradio-checkbox-radius);
+                    @include border-radius($form-checkradio-checkbox-border-radius);
                 }
             }
 
             .form-check-input[type="radio"] ~ .form-check-label {
                 &::before {
-                    @include border-radius($form-checkradio-radio-radius);
+                    @include border-radius($form-checkradio-radio-border-radius);
                 }
             }
 
@@ -145,7 +145,8 @@
                     height: $form-switch-track-height;
                     background-color: $form-switch-track-bg;
                     border: $form-switch-track-border-width solid $form-switch-track-border-color;
-                    @include border-radius($form-switch-track-radius);
+                    @include border-radius($form-switch-track-border-radius);
+                    box-shadow: $form-switch-track-box-shadow;
                     transform: translateY(.5em * $line-height-base) translateY($form-switch-track-height / -2);
                 }
 
@@ -158,7 +159,8 @@
                     height: $form-switch-thumb-height;
                     background-color: $form-switch-thumb-bg;
                     border: $form-switch-thumb-border-width solid $form-switch-thumb-border-color;
-                    @include border-radius($form-switch-thumb-radius);
+                    @include border-radius($form-switch-thumb-border-radius);
+                    box-shadow: $form-switch-thumb-box-shadow;
                     transform: translateY(.5em * $line-height-base) translateY($form-switch-thumb-height / -2);
                 }
             }
